# MorphoLogic

./: README.md  pyproject.toml
src/morphologic/: config.py  visualization.py
