[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphologic"
version = "1.0.0"
description = "Morphology-aware mapping tool"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Max Sterling", email="max.sterling@donders.ru.nl" },
            { name = "Sheersh Srivastava", email="sheersh.srivastava@ru.nl"}
        ]

dependencies = [
    "numpy~=2.0.2",
    "pandas~=2.3.3",
    "scipy~=1.13.1",
    "matplotlib~=3.9.4",
    "tqdm~=4.67.1",
    "tifffile~=2024.8.30",
    "roifile~=2024.9.15",
    "shapely~=2.0.7",
    "rasterio>=1.3",
    "affine>=2.4",
]

[project.scripts]
morphologic = "morphologic.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]